# DaisyDrive64

./: .gitignore  CMakeSettings.json  Makefile  README.md  settings.json
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_tim.h
core/: Makefile  startup_stm32h750xx.c
daisycart64/: CMakeLists.txt  MCUMain.cpp  Makefile  cic_c.cpp  launch.json  settings.json  stm32h7xx_it.c
daisydrive64/: Linkerscript.ld  Makefile  cic_c.cpp  daisydrive64.h  daisydrive64main.cpp  n64common.h  n64pi.cpp  n64si.cpp  stm32h7xx_it.c
dmaexample/: Makefile  __system_stm32h7xx.cpp  main.cpp  stm32h7xx_it.c
src/: Linkerscript.ld  Makefile  cic_c.cpp  daisy_seed.cpp  daisydrive64.h  daisydrive64main.cpp  daisydrive64main.cpp.orig  flashram.cpp  flashram.h  menu.cpp  menu.h  n64common.h  n64pi.cpp  n64si.cpp  og  out.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  qspi_init.cfg  qspi_init2.cfg  sounds.cpp  sounds.h  stm32h7xx_it.c
src/sys/: ffconf.h  system.cpp
tools/: OS64daisyboot.n64  OS64daisyboot.z64  bintoarray.cpp  menurom.z64
